# machq

./: .coverage  .gitignore  README.md  README.rst  pyproject.toml  tox.ini
environment/: apt-list.txt
experiments/rotated_planar_depolarizing_PyMatching/data/: rotated_planar_depolarizing_PyMatching.csv
experiments/sandbox/: rplanar_flags.py  rplanar_measurement_gadget.py
machq/analysis/: __init__.py  code_experiment.py  evaluate_failures.py  quantum_memory.py  test.py  testing.py
machq/codes/: __init__.py  _qec_code.py  rotated_planar_code.py  rotated_planar_code_measurement_flag_gadget.py  rotated_planar_code_measurement_gadget.py
machq/decoders/: __init__.py  _abstract_decoder.py  _pymatching_.py  _pymatching_glue_code.py  get_logical_errors.py  pymatching_glue_code.py  sinter.py
machq/noise/: __init__.py  _stim_noise_.py  basic_noise_model.py
machq/types/: __init__.py  _basic_types.py  _circuit_.py  _error_generation.py  _ml_playground.py  _stim_types.py
tests/codes/: test_rotated_planar_code.py  test_rotated_planar_code_flags.py  test_rotated_planar_code_gadget.py
tests/decoders/: test_sinter.py
tests/noise/: test_basic_noise_model.py  test_stim_noise.py
tests/types/: test_basic_types.py  test_circuit.py  test_stim_types.py
